--- a/index.html
+++ b/index.html
@@ -3,18 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>stepper-ui-forge</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Steppers Life - Event Management Platform</title>
+    <meta name="description" content="Comprehensive event management and ticketing platform for stepping and dance events" />
+    <meta name="author" content="Steppers Life" />
+    
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Montserrat:wght@600;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="stepper-ui-forge" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Steppers Life - Event Management Platform" />
+    <meta property="og:description" content="Comprehensive event management and ticketing platform for stepping and dance events" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://stepperslife.com" />
+    <meta property="og:image" content="https://stepperslife.com/og-image.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@stepperslife" />
+    <meta name="twitter:title" content="Steppers Life - Event Management Platform" />
+    <meta name="twitter:description" content="Comprehensive event management and ticketing platform for stepping and dance events" />
+    <meta name="twitter:image" content="https://stepperslife.com/og-image.jpg" />
     
     <!-- Square Web SDK -->
     <script type="text/javascript" src="https://sandbox.web.squarecdn.com/v1/square.js"></script>
