Refactor Square SDK integration and enhance environment validation
- Removed hardcoded sandbox URL from index.html to allow dynamic loading of the Square SDK.
- Added enhanced debugging logs for environment variables in payment-config.ts to aid in identifying configuration issues.
- Implemented critical validation checks for environment mismatches in payment-config.ts to ensure correct application of production settings.
- Improved logging in square-sdk.ts to track URL selection logic and confirm environment settings during SDK initialization.

--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
     <meta name="twitter:description" content="Comprehensive event management and ticketing platform for stepping and dance events" />
     <meta name="twitter:image" content="https://stepperslife.com/og-image.jpg" />
     
-    <!-- Square Web SDK -->
-    <script type="text/javascript" src="https://sandbox.web.squarecdn.com/v1/square.js"></script>
+    <!-- Square Web SDK - Removed hardcoded sandbox URL to allow dynamic loading -->
   </head>
 
   <body>
