feat: Enhance Square payment integration with improved loading and diagnostics
- Added preconnect and dns-prefetch links for faster loading of the Square SDK in index.html.
- Increased loading timeout for the Square payment form to 25 seconds in SquarePaymentComponent, with enhanced error handling and logging.
- Implemented checks for existing Square SDK script to avoid duplicate loading and added timeout handling for script loading.
- Introduced new health check functionality in PaymentDebugTest to verify Square API status, with appropriate messaging for production and sandbox environments.
- Enhanced logging throughout the Square payment components for better diagnostics and user feedback.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,13 @@
     <meta name="twitter:description" content="Comprehensive event management and ticketing platform for stepping and dance events" />
     <meta name="twitter:image" content="https://stepperslife.com/og-image.jpg" />
     
-    <!-- Square Web SDK - Removed hardcoded sandbox URL to allow dynamic loading -->
+    <!-- Preconnect to Square CDN for faster SDK loading -->
+    <link rel="preconnect" href="https://web.squarecdn.com" crossorigin>
+    <link rel="preconnect" href="https://sandbox.web.squarecdn.com" crossorigin>
+    <link rel="dns-prefetch" href="https://web.squarecdn.com">
+    <link rel="dns-prefetch" href="https://sandbox.web.squarecdn.com">
+    
+    <!-- Square Web SDK - Dynamically loaded based on environment -->
   </head>
 
   <body>
