feat: Update Square SDK integration and add SquareTest route
- Loaded Square Web SDK in index.html to ensure it initializes before React components.
- Added SquareTest route in App.tsx for testing Square payment functionalities.
- Replaced SquarePaymentFormFixed with SquarePaymentSimple in CheckoutModal for streamlined payment processing.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
     <link rel="dns-prefetch" href="https://web.squarecdn.com">
     <link rel="dns-prefetch" href="https://sandbox.web.squarecdn.com">
     
-    <!-- Square Web SDK - Dynamically loaded based on environment -->
+    <!-- Square Web SDK - Load it FIRST before React -->
+    <script type="text/javascript" src="https://web.squarecdn.com/v1/square.js"></script>
   </head>
 
   <body>
